[package]
name = "doctave"
version = "0.1.0"
authors = ["Niklas Begley <nik@doctave.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
walkdir = "2.3.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
handlebars = "3.4.0"
lazy_static = "1.4.0"
hyper = "0.13"
hyper-staticfile = "0.5"

[dev-dependencies]
indoc = "1.0.2"
