[package]
name = "doctave"
version = "0.1.0"
authors = ["Niklas Begley <nik@doctave.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
walkdir = "2.3.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
handlebars = "3.4.0"
lazy_static = "1.4.0"
hyper = "0.13"
hyper-staticfile = "0.5"
tokio = "0.2.22"
futures = "0.3"
futures-util = "0.3"
notify = "4.0.12"
tungstenite = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
crossbeam-channel = "0.4"
elasticlunr-rs = "2.3"

[dev-dependencies]
indoc = "1.0.2"
