[package]
name = "doctave"
version = "0.3.1"
authors = ["Niklas Begley <nik@doctave.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
walkdir = "2.3.1"
doctave-markdown = { git = "https://github.com/Doctave/doctave-markdown", tag = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
handlebars = "3.4.0"
lazy_static = "1.4.0"
tiny_http = "0.6"
ascii = "0.8"
http = "0.2"
notify = "4.0.12"
tungstenite = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
crossbeam-channel = "0.4"
elasticlunr-rs = { version = "2.3", default-features = false }
bunt = "0.2.3"
scoped_threadpool = "0.1"
bus = "2.2.3"
rayon = "1.4"
colorsys = "0.5.7"
alphanumeric-sort = "1.4.0"
include_dir = "0.7.2"

[dev-dependencies]
indoc = "1.0.2"
